--- a/Index.html
+++ b/Index.html
@@ -4,29 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juegos Interactivos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.7.9/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
     <header>
         <h1>Bienvenido a Juegos Interactivos</h1>
         <form id="loginForm">
             <input type="text" id="userName" placeholder="Ingresa tu nombre" required>
+            <br>
             <button type="submit">Iniciar</button>
         </form>
         <div id="userDisplay" style="display:none;">
-            <span id="displayName"></span>
-            <button onclick="showModal()">Ver Marcador</button>
+            <span id="displayName" style="margin: 5px;"></span>
+        </div>
+        <div id="userDisplayButon" style="display:none;">  
+            <button style="margin: 5px;" onclick="showModal()">Ver Marcador</button>
         </div>
     </header>
     <main>
-        <nav>
+        <nav id="menuPrincipal" style="display:none;">
             <ul>
-                <li onclick="loadGame('memory')">Memoria</li>
-                <li onclick="loadGame('trivia')">Trivias</li>
-                <li onclick="loadGame('math')">Operaciones</li>
+                <li onclick="loadGame('Preguntas')">Preguntas</li>
+                <li onclick="loadGame('operaciones')">Operaciones</li>
+                <li onclick="loadGame('Trivia')">Trivia</li>
             </ul>
         </nav>
-        <section id="gameContainer">
+        <section id="Preguntas" style="display:none;">
+            <div class="container">
+                <div>
+                    <div>
+                        <label >Correctas: </label><label id="contadorCorrectas">1</label>
+                    </div>
+                    <div>
+                        <label >Incorrectas: </label><label id="contadorIncorrectas">1</label>
+                    </div>
+                </div>
+                <div id="contenedorPregunta" class="question-container">
+                    <!--
+                    <div class="question">What is the powerhouse of the cell?</div>
+                    <button type="button" class="btn btn-lg btn-block answer ">Wrong Answer 1</button>
+                    <button type="button" class="btn btn-lg btn-block answer ">Wrong Answer 2</button>
+                    <button type="button" class="btn btn-lg btn-block answer ">Wrong Answer 3</button>
+                    <button type="button" class="btn btn-lg btn-block answer ">Mitochondria</button>
+                    -->
+                </div>
+            </div>
+        </section>
+        <section id="operaciones" style="display:none;">
+            <!-- Aquí se cargarán los juegos -->
+        </section>
+        <section id="Trivia" style="display:none;">
             <!-- Aquí se cargarán los juegos -->
         </section>
     </main>
@@ -35,6 +65,54 @@
         <p>Derrotas: <span id="losses">0</span></p>
         <button onclick="hideModal()">Cerrar</button>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/preguntas.js"></script>
+    <script src="js/logicaPreguntas.js"></script>
+
+    <!--Modal de mensajes
+    <div id="modalMensajes" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="idTituloMensaje"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p id="idTextoMesaje"></p>
+            </div>
+            <div class="modal-footer">
+              <button id="idTextoBoton" type="button" class="btn btn-primary"></button>
+            </div>
+          </div>
+        </div>
+      </div>
+-->
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="modalMensajes" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="idTituloMensaje"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <p id="idTextoMesaje"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
