Sea agregan numeros

--- a/Index.html
+++ b/Index.html
@@ -67,10 +67,10 @@
             </div>
         </section>
         <section id="sectionOperaciones" style="display:none;">
+            <div id="idTipoOperacion" class="question-container"  style="display:none;">
+            </div>
             <div id="contenedorOperacion" class="question-container">
-                <div>
-                    <h3>Juego de </h3><h3 id="indicadorOperacion">0</h3>
-                </div>
+                <h3 id="idTipoOperacion"></h3>
             </div>
         </section>
         <section id="Memoria" style="display:none;">
